[gd_scene load_steps=22 format=3 uid="uid://camofsk011mym"]

[ext_resource type="Script" path="res://Scenes/Utility/start_meny.gd" id="1_eekkl"]
[ext_resource type="FontFile" uid="uid://bdyf6xdeqbws4" path="res://Graphics/UI/Fonts/S-Ness Serif 8x8.ttf" id="1_g78kl"]
[ext_resource type="Texture2D" uid="uid://dq7gkgpuw3v7e" path="res://Graphics/LD56Player.png" id="3_gofxx"]
[ext_resource type="AudioStream" uid="uid://div7bj0da1xge" path="res://Sound/click.wav" id="4_eog0e"]
[ext_resource type="Shader" path="res://Scenes/Utility/enemy.gdshader" id="4_xb6ns"]
[ext_resource type="AudioStream" uid="uid://dqdumbi13m0mt" path="res://Sound/LD56SFXIntri.wav" id="6_bc6ry"]

[sub_resource type="Theme" id="Theme_ny2xn"]
default_font = ExtResource("1_g78kl")

[sub_resource type="Animation" id="Animation_17g4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(163, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(171.5, 164)]
}

[sub_resource type="Animation" id="Animation_2xvys"]
resource_name = "swoop"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(163, 160), Vector2(500, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:visible")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"anim2_play_pos"
}]
}

[sub_resource type="Animation" id="Animation_j6kpd"]
resource_name = "textpos"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(171.5, 164), Vector2(171.5, 220)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_em0a7"]
_data = {
"RESET": SubResource("Animation_17g4g"),
"swoop": SubResource("Animation_2xvys"),
"textpos": SubResource("Animation_j6kpd")
}

[sub_resource type="Animation" id="Animation_odgvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.378232, 7.18953e-07, 1.92523e-07, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7gchh"]
resource_name = "outline"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_outline_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.378232, 7.18953e-07, 1.92523e-07, 1), Color(0.546408, 1.67254e-06, 4.33177e-07, 1), Color(0.378232, 7.18953e-07, 1.92523e-07, 1), Color(0.546408, 1.67254e-06, 4.33177e-07, 1), Color(0.378232, 7.18953e-07, 1.92523e-07, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.01, 1.01), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfmke"]
_data = {
"RESET": SubResource("Animation_odgvi"),
"outline": SubResource("Animation_7gchh")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54t7s"]
resource_local_to_scene = true
shader = ExtResource("4_xb6ns")
shader_parameter/start_frame = 0
shader_parameter/current_frame = 0
shader_parameter/mix_ratio = 0.0

[sub_resource type="Theme" id="Theme_6tm6u"]
default_font = ExtResource("1_g78kl")

[sub_resource type="Animation" id="Animation_b3mky"]
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yxtgd"]
_data = {
"RESET": SubResource("Animation_b3mky")
}

[sub_resource type="Animation" id="Animation_jkx10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.551799, 0.0337884, 0.0337881, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HBoxContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HBoxContainer2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HBoxContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HBoxContainer2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("quitbtn:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("quitbtn:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("fullscreen:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("fullscreen:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("music:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("music:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mpwwy"]
resource_name = "spritevisible"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"btn_grab_focus"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.552941, 0.0352941, 0.0352941, 0), Color(0.552941, 0.0352941, 0.0352941, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HBoxContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HBoxContainer2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HBoxContainer:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("HBoxContainer2:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("quitbtn:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("quitbtn:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("fullscreen:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("fullscreen:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("music:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("music:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbtg4"]
_data = {
"RESET": SubResource("Animation_jkx10"),
"spritevisible": SubResource("Animation_mpwwy")
}

[node name="StartMeny" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00820202, 0.00820202, 0.00820202, 1)
script = ExtResource("1_eekkl")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -16.0
offset_right = 148.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ny2xn")
theme_override_colors/font_outline_color = Color(0.378232, 7.18953e-07, 1.92523e-07, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "Particle Wars"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_em0a7")
}
autoplay = "swoop"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gfmke")
}
autoplay = "outline"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(259, 130)
scale = Vector2(2, 2)
texture = ExtResource("3_gofxx")
hframes = 3
vframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.551799, 0.0337884, 0.0337881, 1)
material = SubResource("ShaderMaterial_54t7s")
position = Vector2(381, 131)
scale = Vector2(2, 2)
texture = ExtResource("3_gofxx")
flip_h = true
hframes = 3
vframes = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -20.0
offset_right = 162.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6tm6u")
theme_override_colors/font_pressed_color = Color(0.912271, 3.17663e-06, 6.73831e-07, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.376471, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.545098, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.376471, 0, 0, 1)
text = "Play
"

[node name="quitbtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.984
anchor_right = 0.5
anchor_bottom = 0.984
offset_left = -28.5
offset_top = -31.0
offset_right = 28.5
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_bottom = NodePath("../Button")
theme = SubResource("Theme_6tm6u")
theme_override_colors/font_pressed_color = Color(0.912271, 3.17663e-06, 6.73831e-07, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.376471, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.545098, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.376471, 0, 0, 1)
text = "Quit
"

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yxtgd")
}
autoplay = "RESET"

[node name="AnimationPlayer4" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbtg4")
}

[node name="snd_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_eog0e")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.315
anchor_right = 0.506
anchor_bottom = 0.315
offset_left = -40.0
offset_top = -4.5
offset_right = 40.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2

[node name="lbl_hard" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_g78kl")
theme_override_font_sizes/font_size = 8
text = "Hard -"

[node name="lbl_veryhard" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_g78kl")
theme_override_font_sizes/font_size = 8
text = "Harder"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.396
anchor_right = 0.5
anchor_bottom = 0.396
offset_left = -26.0
offset_top = -20.0
offset_right = 26.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="hard" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../veryhard")
focus_neighbor_top = NodePath("../../quitbtn")
theme_override_colors/icon_focus_color = Color(0.6, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)

[node name="veryhard" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../quitbtn")
focus_neighbor_right = NodePath("../hard")
theme_override_colors/icon_focus_color = Color(0.599057, 1.43189e-06, 4.33177e-07, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_g78kl")
theme_override_font_sizes/font_size = 8

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bc6ry")
volume_db = -5.0
autoplay = true

[node name="fullscreen" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.831
anchor_right = 0.5
anchor_bottom = 0.831
offset_left = -59.0
offset_top = -25.0
offset_right = 59.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_right = NodePath("../music")
theme_override_colors/icon_focus_color = Color(0.6, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_g78kl")
theme_override_font_sizes/font_size = 12
text = "Fullscreen"

[node name="music" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.951
anchor_right = 0.125
anchor_bottom = 0.951
offset_left = -59.0
offset_top = -25.0
offset_right = 59.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../fullscreen")
theme_override_colors/icon_focus_color = Color(0.6, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_g78kl")
theme_override_font_sizes/font_size = 12
text = "Music"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="quitbtn" to="." method="_on_quitbtn_pressed"]
[connection signal="toggled" from="HBoxContainer/hard" to="." method="_on_hard_toggled"]
[connection signal="toggled" from="HBoxContainer/veryhard" to="." method="_on_veryhard_toggled"]
[connection signal="toggled" from="fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="music" to="." method="_on_music_toggled"]
